@@ -23,6 +23,9 @@ New features:
   semantics as `obnam restore`.  Now a restore with `--to` can be
   verified.
 
+* David Fries added option 'ssh-options' to pass additional options to
+  ssh.
+
 Bug fixes:
 
 * The Obnam SFTP plugin would loop infinitely if it lost the
